--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
 </head>
 <body>
     <h1 class="heading">Coding Quiz!</h1>
-    <button type="button">START</button>
-    <h2 class="heading">Question Text</h2>
-    <button type="button">A</button>
-    <button type="button">B</button>
-    <button type="button">C</button>
-    <button type="button">D</button>
-    <h3 class="heading">Choice A</h3>
-    <h3 class="heading">Choice B</h3>
-    <h3 class="heading">Choice C</h3>
-    <h3 class="heading">Choice D</h3>
-    <h2 class="timer">60</h2>
+    <button type="button" id="start">START</button>
+    <h2 class="heading" id="question">Question Text</h2>
+    <button type="button" id="A">A</button>
+    <button type="button" id="B">B</button>
+    <button type="button" id="C">C</button>
+    <button type="button" id="D">D</button>
+    <h3 class="heading" id="CA">Choice A</h3>
+    <h3 class="heading" id="CB">Choice B</h3>
+    <h3 class="heading" id="CC">Choice C</h3>
+    <h3 class="heading" id="CD">Choice D</h3>
+    <h2 class="timer" id="timer">60</h2>
+    <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
